test/files/neg/unchecked-abstract.check
unchecked-abstract.scala:18: warning: abstract type H in type Contravariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Contravariant[H]])
                                       ^
unchecked-abstract.scala:23: warning: abstract type H in type Contravariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Contravariant[H]])
                                       ^
unchecked-abstract.scala:24: warning: abstract type T in type Contravariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Contravariant[T]])
                                       ^
unchecked-abstract.scala:29: warning: abstract type T in type Invariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[T]])
                                       ^
unchecked-abstract.scala:30: warning: abstract type L in type Invariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[L]])
                                       ^
unchecked-abstract.scala:33: warning: abstract type H in type Invariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[H]])
                                       ^
unchecked-abstract.scala:35: warning: abstract type L in type Invariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[L]])
                                       ^
unchecked-abstract.scala:38: warning: abstract type H in type Invariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[H]])
                                       ^
unchecked-abstract.scala:39: warning: abstract type T in type Invariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[T]])
                                       ^
unchecked-abstract.scala:44: warning: abstract type T in type Covariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Covariant[T]])
                                       ^
unchecked-abstract.scala:45: warning: abstract type L in type Covariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Covariant[L]])
                                       ^
unchecked-abstract.scala:50: warning: abstract type L in type Covariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Covariant[L]])
                                       ^
error: No warnings can be incurred under -Werror.
12 warnings found
one error found
